# skewer

./: .gitignore  README.md  install.py  scanner.py  start.py
.opencode/: opencode.json
admin/: package.json
admin/src/: App.vue
admin/src/views/: Dashboard.vue  Logs.vue  Prices.vue
backend/: API.md  pyproject.toml  requirements.txt  scanner.py  schema.sql  server.py
backend/dataset/: data.yaml
backend/dataset/labels/: train.cache  val.cache
backend/db/: __init__.py  connection.py  models.py  queries.py
backend/detector/: __init__.py  cli.py  detector.py
backend/routes/: __init__.py  _deps.py  admin.py  auth.py  menu.py  orders.py  tables.py
backend/runtime/: data.db
backend/services/: __init__.py  auth.py  detection.py  pricing.py
backend/src/: __init__.py  detector.py
backend/test/: test_server.py
frontend/: package-lock.json  package.json
frontend-clean/src/router/: index.js
frontend-clean/src/views/: Login.vue  Users.vue
frontend/src/api/: admin.js  auth.js
frontend/src/views/: Reports.vue  Users.vue
skewer-main/: .gitignore
skewer-main/backend/routes/: orders.py
skewer-main/backend/services/: detection.py
skewer-main/frontend/: package-lock.json  package.json
skewer-main/frontend-clean/src/: main.js
waiter/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  开发文档.md  测试文档.md
waiter/src/: App.vue  api.js  main.js  style.css  toast.js
waiter/src/api/: index.js
waiter/src/components/: AppHeader.vue  Toast.vue  (+1 more)
准备工作/: 2026-06-30-admin-frontend-implementation-plan.md  API.md
(+25 files in other folders)
