[project]
name = "skewer-counter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.0",
    "numpy>=1.24",
    "ultralytics>=8.0",
    "fastapi[standard]>=0.115",
    "pyjwt>=2.0",
    "bcrypt>=4.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0",
]

[project.scripts]
server  = "server:main"
